add token games and debug