@@ -17,22 +17,28 @@ import java.util.logging.Logger;
 public class Set implements Runnable {
     private static final Logger logger = Logger.getLogger(Set.class.getName());
 
+    // player
     private final Player[] players;
     private final int numberOfPlayers;
+
+    // property of ruler
     private final Player ruler;
     private Card.Suit rule;
 
+    // teams
     private final ArrayList<Team> teams;
     private final int[] scoresOfTeams;
     private final int[] scoresOfPlayers;
     private int round;
     private final ArrayList<Card> onTableCards = new ArrayList<>();
 
+    // concurrency
     private final Lock setLock = new ReentrantLock();
     private final Condition ruleSelected = setLock.newCondition();
     private final Condition turnCondition = setLock.newCondition();
     private int currentPlayerIndex;
 
+    // result of the game
     private Team winner;
 
     public Team getWinner() {
@@ -50,26 +56,33 @@ public class Set implements Runnable {
         this.scoresOfPlayers = new int[numberOfPlayers];
         Arrays.fill(scoresOfPlayers, 0);
 
+        // determine ruler
         int indexOfRuler = new SecureRandom().nextInt(0, numberOfPlayers);
         this.ruler = players[indexOfRuler];
         this.ruler.setRuler(true);
 
+        // to put ruler in first turn
         Collections.rotate(Arrays.asList(players), 4 - indexOfRuler);
         logger.info("Set created with ruler: " + ruler.getName());
     }
 
     @Override
     public void run() {
+        // specify ruler
         sendData("ruler:" + ruler.getId());
+
+        // divide cards
         divideCards();
 
         while (scoresOfTeams[0] < 7 && scoresOfTeams[1] < 7) {
+            // start the round
             sendData("round:" + ++round);
             playRound();
         }
 
+        // determine the winner of the set and send it
         if (scoresOfTeams[0] == 7) {
-            winner = teams.get(0);
+            winner = teams.getFirst();
             sendData("winner set:team1");
         } else {
             winner = teams.get(1);
@@ -78,6 +91,7 @@ public class Set implements Runnable {
     }
 
     private void divideCards() {
+        // devide cards btw users and send them to users
         Card[][] cards = GameService.divideCards(numberOfPlayers);
 
         if (numberOfPlayers == 4) {
@@ -85,13 +99,16 @@ public class Set implements Runnable {
                 players[i].setCards(Arrays.asList(cards[i]));
             }
 
+            // set 5 first 5 cards of ruler
             ruler.setCards(Arrays.asList(cards[0]).subList(0, 5));
 
+            // Wait for ruler to select the rule
             setLock.lock();
             try {
                 while (rule == null) {
                     ruleSelected.await();
                 }
+                // After the rule is selected, send all the cards to the ruler
                 ruler.setCards(Arrays.asList(cards[0]));
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
@@ -100,6 +117,7 @@ public class Set implements Runnable {
                 setLock.unlock();
             }
 
+            // send the rule of the game
             sendData("rule:" + rule);
         } else if (players.length == 2) {
             // determine player that is not ruler
@@ -110,39 +128,28 @@ public class Set implements Runnable {
 
             player1.start();
             player2.start();
-            sendData("divide cards");
-            for (int i = 0; i < 2; i++) {
-                Player currentPlayer = players[i];
-                for (int j = 0; j < 5; j++) {
-                    sendData(cards[i][j], currentPlayer);
-                }
-                if (currentPlayer.equals(ruler)) {
-                    sendData("Choose games rule");
-                    try {
-                        currentPlayer.getInput().readObject();
-                    } catch (Exception e) {
-                        logger.log(Level.SEVERE, "Error reading rule selection: " + e.getMessage());
-                    }
-                }
-            }
         }
     }
 
     private void playRound() {
+        // they should play cards
         for (int i = 0; i < numberOfPlayers; i++) {
             setLock.lock();
             try {
                 currentPlayerIndex = i;
                 turnCondition.signalAll();
 
+                // get cards from the current player
                 sendData("turn" + (i + 1) + ":" + players[currentPlayerIndex].getId());
                 Card playedCard = players[i].playCard();
                 logger.info("Player " + players[i].getName() + " played: " + playedCard);
                 onTableCards.add(playedCard);
 
+                // send played card
                 sendData("on table card:" + players[currentPlayerIndex].getId());
                 sendData(playedCard);
 
+                // change the turn
                 currentPlayerIndex++;
                 while (currentPlayerIndex == i) {
                     turnCondition.await();
@@ -155,10 +162,12 @@ public class Set implements Runnable {
             }
         }
 
+        // determine the winner of the round
         Card winCard = GameService.topCard(onTableCards, rule);
         int indexOfWinner = onTableCards.indexOf(winCard);
         Player winner = players[indexOfWinner];
 
+        // increase score of the winner and winner team
         scoresOfPlayers[indexOfWinner]++;
         if (teams.get(0).getPlayers().contains(winner)) {
             scoresOfTeams[0]++;
@@ -166,8 +175,10 @@ public class Set implements Runnable {
             scoresOfTeams[1]++;
         }
 
+        // send the winner to client
         sendData("winner round:" + winner.getId().toString());
 
+        // initial again
         onTableCards.clear();
         currentPlayerIndex = 0;
     }
